--- a/index.html
+++ b/index.html
@@ -7,25 +7,36 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
+
+   <div class="container-fluid">
+    <div  class="container">
+        <h2>Sign up</h2>
+        <form id="register">
+             <div class="mb-3 mt-5">
+    <label for="username" class="form-label">Name</label>
+    <input type="text" class="form-control" id="username" aria-describedby="emailHelp">
+
+  </div>
+   <div class="mb-3 mt-5">
+    <label for="usercontact" class="form-label">Contact</label>
+    <input type="number" class="form-control" id="usercontact" aria-describedby="emailHelp">
+
+  </div>
+  <div class="mb-3">
+    <label for="exampleInputEmail1" class="form-label">Email address</label>
+    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+  </div>
+  <div class="mb-3">
+    <label for="exampleInputPassword1" class="form-label">Password</label>
+    <input type="password" class="form-control" id="exampleInputPassword1">
+  </div>
+  <button type="submit" class="btn btn-primary">Submit</button>
+  <p>Have an accout <a href="login.html">Login here</a></p>
+</form>
+
+    </div>
+   </div>
     
-    
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
