--- a/home.html
+++ b/home.html
@@ -5,11 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <style>
+        #logout{
+        position: absolute;
+        right: 10px;
+        top: 20px;
+        border: none;
+        background-color: transparent;
+        font-size: 40px;
+    }
+    </style>
 </head>
 <body>
-
-
-
+    <h1>Welcome to home page<span id="username"></span></h1>
+    <button id="logout"><i class="fa-solid fa-arrow-right-from-bracket"></i></button>
 
 
 
@@ -17,5 +26,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>     
     <script type="module" src="config.js"></script>
     <script type="module" src="authen.js"></script>
+    <script type="module" src="home.js"></script>
 </body>
 </html>
