--- a/home.html
+++ b/home.html
@@ -19,6 +19,11 @@
 <body>
     <h1>Welcome to home page<span id="username"></span></h1>
     <button id="logout"><i class="fa-solid fa-arrow-right-from-bracket"></i></button>
+    <button>click</button>
+
+
+
+
 
 
 
